# facet-filter-page

./: AGENTS.md  README.md  Taskfile.yaml  about.html  about.md  index.html  package-lock.json  package.json  playwright.config.ts  postcss.config.cjs  test-card.html  tsconfig.json  vite.config.ts
e2e/: app.spec.ts
jules-scratch/verification/: debug_styles.py  observe.py  simple_screenshot.py  verify_app_loads.py  verify_bulma_migration.py  verify_card.py  verify_filter.py  verify_filters.py  verify_frontend.py  verify_integration.py  verify_production.py  verify_rendering.py  verify_svelte_conversion.py  verify_ui.py
playwright-report/: index.html
public/: DoesItFart.json  boxen-config.json  boxen-ui-config.json  boxen.json  doesitfart-config.json  doesitfart-ui-config.json  products-config.json  products.json  setup.json  template-config.json  ui-config.json
scripts/: DoesItFart.csv  boxen-config.csv  boxen-ui-config.yaml  boxen.csv  boxen.json  convert_to.py  convert_to_json.py  doesitfart-config.yaml  doesitfart-ui-config.yaml  generate_json.py  products-config.csv  products.csv  products.json  pyproject.toml
src/: App.svelte  about.ts  app.test.ts  app.ts  main.js  main.test.js  main.test.ts  main.ts  products.json  style.css  test-card.ts  theme.css  vite-env.d.ts
src/components/: FilterSidebar.svelte  Footer.svelte  Header.svelte  ProductCard.svelte  ProductList.svelte
src/lib/: itemsjs.ts
src/services/: ConfigService.test.ts  ConfigService.ts  SearchService.test.ts  SearchService.ts
src/state/: index.ts  stores.ts
src/types/: index.ts
(+18 files in other folders)
